Bug 1738129 - fix Save Link As... for PDF files to show save dialog with downloads improvements pref enabled. r=Gijs,mtigley

Differential Revision: https://phabricator.services.mozilla.com/D131310